trying to fix scrollbars

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -32,7 +32,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-ahem-landing-page {
+app-main-page {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
